Fix compilation for old JDK